finish hidden states extraction. fix default device

--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -116,7 +116,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L20){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L24){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### language_model_init\n",
        "\n",
@@ -136,7 +136,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L20){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L24){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### language_model_init\n",
        "\n",
@@ -500,7 +500,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L81){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L85){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### finetune_lm\n",
        "\n",
@@ -538,7 +538,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L81){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L85){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### finetune_lm\n",
        "\n",
@@ -764,23 +764,66 @@
     "            str_list = [str(s).replace(mask_str,tokenizer.mask_token) for s in str_list]\n",
     "        return [pipeline_obj(s,**kwargs) for s in str_list]\n",
     "    \n",
-    "    def get_hidden_states_from_raw_dset(self,\n",
-    "                                        dset: Dataset, # A raw HuggingFace dataset\n",
+    "    def get_hidden_states_from_raw_text(self,\n",
+    "                                        content:dict|list|str, # Either a single sentence, list of sentence or a dictionary where keys are metadata, values are list\n",
     "                                        state_name, # Name of the (hidden) state to extract\n",
     "                                        state_idx=0, # The index (or indices) of the state to extract. For `hidden_states`, accept multiple values\n",
     "                                       ):\n",
     "        if not isinstance(self.data_store,(TextDataLMController,TextDataLMControllerStreaming)) or not self.data_store._processed_call:\n",
     "            raise ValueError('This functionality needs a TextDataController object which has processed some training data')\n",
+    "        dset = self.data_store.prepare_test_dataset_from_raws(content,do_tokenize=True)\n",
+    "        return self.get_hidden_states(dset,\n",
+    "                                      state_name=state_name,\n",
+    "                                      state_idx=state_idx,\n",
+    "                                      batch_size=1\n",
+    "                                     )\n",
+    "\n",
+    "        \n",
+    "    def get_hidden_states_from_raw_dset(self,\n",
+    "                                        dset: Dataset, # A raw HuggingFace dataset\n",
+    "                                        state_name, # Name of the (hidden) state to extract\n",
+    "                                        state_idx=0, # The index (or indices) of the state to extract. For `hidden_states`, accept multiple values\n",
+    "                                        batch_size=16, # GPU batch size\n",
+    "                                       ):\n",
+    "        if not isinstance(self.data_store,(TextDataLMController,TextDataLMControllerStreaming)) or not self.data_store._processed_call:\n",
+    "            raise ValueError('This functionality needs a TextDataController object which has processed some training data')\n",
     "        dset = self.data_store.prepare_test_dataset(dset,do_tokenize=True)\n",
-    "        return self.get_hidden_states(dset,state_name,state_idx)\n",
+    "        return self.get_hidden_states(dset,\n",
+    "                                      state_name=state_name,\n",
+    "                                      state_idx=state_idx,\n",
+    "                                      batch_size=batch_size\n",
+    "                                     )\n",
     "        \n",
     "        \n",
     "    def get_hidden_states(self,\n",
-    "                          dset: Dataset,# A processed and tokenized DatasetDict/Dataset\n",
-    "                          \n",
+    "                          ddict:DatasetDict|Dataset=None, # A processed and tokenized DatasetDict/Dataset (will override one in ```data_store```)\n",
+    "                          ds_type='test', # The split of DatasetDict to predict\n",
+    "                          state_name='last_hidden_state', # Name of the (hidden) state to extract\n",
+    "                          state_idx=0, # The index (or indices) of the state to extract. For `hidden_states`, accept multiple values\n",
+    "                          batch_size=16, # GPU batch size\n",
     "                         ):\n",
+    "        \n",
     "        tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
-    "        dset.set_format(\"torch\",columns=tokenizer.model_input_names)                   "
+    "        if ddict is None: ddict = check_and_get_attribute(self.data_store,'main_ddict')\n",
+    "        if isinstance(ddict,DatasetDict):\n",
+    "            if ds_type not in ddict.keys():\n",
+    "                raise ValueError(f'{ds_type} is not in the given DatasetDict')\n",
+    "            ddict = ddict[ds_type]\n",
+    "        \n",
+    "        ddict.set_format(\"torch\",\n",
+    "                        columns=tokenizer.model_input_names)\n",
+    "        \n",
+    "        results = ddict.map(partial(extract_hidden_states,\n",
+    "                                 model=self.model,\n",
+    "                                 model_input_names = tokenizer.model_input_names,\n",
+    "                                 state_name=state_name,\n",
+    "                                 state_idx=state_idx,\n",
+    "                                 device = self.model.device),\n",
+    "                           batched=True,\n",
+    "                           batch_size=batch_size\n",
+    "                          )\n",
+    "        results.set_format('numpy')\n",
+    "        return results\n"
    ]
   },
   {
@@ -793,7 +836,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L145){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L202){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController\n",
        "\n",
@@ -810,7 +853,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L145){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L202){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController\n",
        "\n",
@@ -844,7 +887,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L155){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L212){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController.fit\n",
        "\n",
@@ -879,7 +922,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L155){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L212){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController.fit\n",
        "\n",
@@ -931,6 +974,8 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L274){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### ModelLMController.predict_raw_text\n",
        "\n",
        ">      ModelLMController.predict_raw_text (content:dict|list|str,\n",
@@ -944,6 +989,8 @@
       ],
       "text/plain": [
        "---\n",
+       "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L274){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController.predict_raw_text\n",
        "\n",
