--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -314,7 +314,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L61){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L66){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### compute_metrics\n",
        "\n",
@@ -339,7 +339,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L61){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L66){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### compute_metrics\n",
        "\n",
@@ -417,7 +417,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L111){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L116){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### compute_metrics_separate_heads\n",
        "\n",
@@ -439,7 +439,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L111){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L116){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### compute_metrics_separate_heads\n",
        "\n",
@@ -534,7 +534,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L140){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L145){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### loss_for_classification\n",
        "\n",
@@ -565,7 +565,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L140){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L145){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### loss_for_classification\n",
        "\n",
@@ -683,7 +683,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L189){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L194){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### finetune\n",
        "\n",
@@ -720,7 +720,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L189){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L194){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### finetune\n",
        "\n",
@@ -1079,7 +1079,6 @@
     "        \n",
     "    def predict_raw_text(self,\n",
     "                         content:dict|list|str, # Either a single sentence, list of sentence or a dictionary where keys are metadata, values are list\n",
-    "                         batch_size=1, # Batch size. For a small amount of texts, you might want to keep this small\n",
     "                         is_multilabel=None, # Is this a multilabel classification?\n",
     "                         multilabel_threshold=0.5, # Threshold for multilabel classification\n",
     "                         topk=1, # Number of labels to return for each head\n",
@@ -1091,7 +1090,7 @@
     "        test_dset = self.data_store.prepare_test_dataset_from_raws(content)\n",
     "\n",
     "        results = self.predict_ddict(ddict=test_dset,\n",
-    "                                     batch_size=batch_size,\n",
+    "                                     batch_size=1,\n",
     "                                     is_multilabel=is_multilabel,\n",
     "                                     multilabel_threshold=multilabel_threshold,\n",
     "                                     topk=topk,\n",
@@ -1101,7 +1100,7 @@
     "    \n",
     "    def predict_raw_dset(self,\n",
     "                         dset, # A raw HuggingFace dataset\n",
-    "                         batch_size=16, # Batch size. For a small amount of texts, you might want to keep this small\n",
+    "                         batch_size=16, # GPU batch size. For a small amount of texts, you might want to keep this small\n",
     "                         do_filtering=False, # Whether to perform data filtering on this test set\n",
     "                         is_multilabel=None, # Is this a multilabel classification?\n",
     "                         multilabel_threshold=0.5, # Threshold for multilabel classification\n",
@@ -1133,10 +1132,9 @@
     "                      data_collator=None, # Data Collator (to override one in ```data_store```)\n",
     "                      label_names=None, # Names of the label (dependent variable) columns (to override one in ```data_store```)\n",
     "                      class_names_predefined=None, # List of names associated with the labels (same index order) (to override one in ```data_store```)\n",
-    "                      device=None, # Device that the model is trained on\n",
     "                      are_heads_separated=False # Are outputs (of model) separate heads?\n",
     "                     ):\n",
-    "        if device is None: device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        device = self.model.device\n",
     "        if is_multilabel is None: is_multilabel=getattr(self.model,'is_multilabel',False)\n",
     "        label_lists = class_names_predefined\n",
     "        if tokenizer is None: tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
@@ -1252,7 +1250,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L378){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L384){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1269,7 +1267,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L378){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L384){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1303,13 +1301,13 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L388){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L394){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f67eb16bc70>], metric_types=[], batch_size=16,\n",
+       ">                           0x7fae4c47fd90>], metric_types=[], batch_size=16,\n",
        ">                           weight_decay=0.01, lr_scheduler_type='cosine',\n",
        ">                           warmup_ratio=0.1, o_dir='./tmp_weights',\n",
        ">                           save_checkpoint=False, hf_report_to='none',\n",
@@ -1343,13 +1341,13 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L388){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L394){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f67eb16bc70>], metric_types=[], batch_size=16,\n",
+       ">                           0x7fae4c47fd90>], metric_types=[], batch_size=16,\n",
        ">                           weight_decay=0.01, lr_scheduler_type='cosine',\n",
        ">                           warmup_ratio=0.1, o_dir='./tmp_weights',\n",
        ">                           save_checkpoint=False, hf_report_to='none',\n",
@@ -1400,11 +1398,11 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L448){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L454){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
-       ">      ModelController.predict_raw_text (content:dict|list|str, batch_size=1,\n",
+       ">      ModelController.predict_raw_text (content:dict|list|str,\n",
        ">                                        is_multilabel=None,\n",
        ">                                        multilabel_threshold=0.5, topk=1,\n",
        ">                                        are_heads_separated=False)"
@@ -1412,11 +1410,11 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L448){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L454){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
-       ">      ModelController.predict_raw_text (content:dict|list|str, batch_size=1,\n",
+       ">      ModelController.predict_raw_text (content:dict|list|str,\n",
        ">                                        is_multilabel=None,\n",
        ">                                        multilabel_threshold=0.5, topk=1,\n",
        ">                                        are_heads_separated=False)"
@@ -1441,7 +1439,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L470){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L475){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1453,7 +1451,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L470){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L475){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1482,7 +1480,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L493){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L498){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
@@ -1493,7 +1491,7 @@
        ">                                     multilabel_threshold=0.5, topk=1,\n",
        ">                                     tokenizer=None, data_collator=None,\n",
        ">                                     label_names=None,\n",
-       ">                                     class_names_predefined=None, device=None,\n",
+       ">                                     class_names_predefined=None,\n",
        ">                                     are_heads_separated=False)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
@@ -1508,13 +1506,12 @@
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| label_names | NoneType | None | Names of the label (dependent variable) columns (to override one in ```data_store```) |\n",
        "| class_names_predefined | NoneType | None | List of names associated with the labels (same index order) (to override one in ```data_store```) |\n",
-       "| device | NoneType | None | Device that the model is trained on |\n",
        "| are_heads_separated | bool | False | Are outputs (of model) separate heads? |"
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L493){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L498){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
@@ -1525,7 +1522,7 @@
        ">                                     multilabel_threshold=0.5, topk=1,\n",
        ">                                     tokenizer=None, data_collator=None,\n",
        ">                                     label_names=None,\n",
-       ">                                     class_names_predefined=None, device=None,\n",
+       ">                                     class_names_predefined=None,\n",
        ">                                     are_heads_separated=False)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
@@ -1540,7 +1537,6 @@
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| label_names | NoneType | None | Names of the label (dependent variable) columns (to override one in ```data_store```) |\n",
        "| class_names_predefined | NoneType | None | List of names associated with the labels (same index order) (to override one in ```data_store```) |\n",
-       "| device | NoneType | None | Device that the model is trained on |\n",
        "| are_heads_separated | bool | False | Are outputs (of model) separate heads? |"
       ]
      },
