--- a/nbs/03_model_lm_gpt2_tutorial.ipynb
+++ b/nbs/03_model_lm_gpt2_tutorial.ipynb
@@ -60,7 +60,9 @@
     "from that_nlp_library.text_transformation import *\n",
     "from that_nlp_library.text_augmentation import *\n",
     "from that_nlp_library.text_main_lm import *\n",
-    "from that_nlp_library.utils import seed_everything"
+    "from that_nlp_library.utils import seed_everything\n",
+    "from that_nlp_library.model_lm_main import *\n",
+    "from that_nlp_library.utils import resize_model_embeddings"
    ]
   },
   {
@@ -85,9 +87,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from transformers import DataCollatorForLanguageModeling\n",
-    "from tokenizers import processors\n",
-    "from that_nlp_library.model_lm_main import *\n",
-    "from that_nlp_library.utils import resize_model_embeddings"
+    "from tokenizers import processors"
    ]
   },
   {
