--- a/nbs/03_model_lm_roberta_tutorial.ipynb
+++ b/nbs/03_model_lm_roberta_tutorial.ipynb
@@ -60,7 +60,8 @@
     "from that_nlp_library.text_transformation import *\n",
     "from that_nlp_library.text_augmentation import *\n",
     "from that_nlp_library.text_main_lm import *\n",
-    "from that_nlp_library.utils import seed_everything"
+    "from that_nlp_library.utils import seed_everything\n",
+    "from that_nlp_library.model_lm_main import *"
    ]
   },
   {
@@ -84,8 +85,7 @@
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from transformers import DataCollatorForLanguageModeling\n",
-    "from that_nlp_library.model_lm_main import *"
+    "from transformers import DataCollatorForLanguageModeling"
    ]
   },
   {
