--- a/nbs/08_hidden_states.ipynb
+++ b/nbs/08_hidden_states.ipynb
@@ -110,6 +110,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to extract a feature vector from a review sentence in the dataset, we can directly use pretrained models such as Roberta, GPT2, ... But if our dataset is vastly different from the datasets these pretrained models are trained on, we can finetune these pretrained models on our dataset before extracting the feature vector. And that's exactly what we are going to do now."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -352,28 +359,7 @@
     "               weight_decay=wd,\n",
     "               warmup_ratio=warmup_ratio,\n",
     "               save_checkpoint=False,\n",
-    "              )\n",
-    "\n",
-    "\n",
-    "# Epoch\tTraining Loss\tValidation Loss\tAccuracy\n",
-    "# 1\tNo log\t1.571658\t0.646139\n",
-    "# 2\t1.695500\t1.465111\t0.663383\n",
-    "# 3\t1.695500\t1.357892\t0.681303\n",
-    "# 4\t1.403900\t1.323384\t0.689879\n",
-    "#  [142/142 00:05]\n",
-    "# Perplexity on validation set: 3.743\n",
-    "\n",
-    "\n",
-    "# Epoch\tTraining Loss\tValidation Loss\tAccuracy\n",
-    "# 1\tNo log\t1.580835\t0.645475\n",
-    "# 2\t1.741400\t1.626058\t0.635716\n",
-    "# 3\t1.741400\t1.575994\t0.646871\n",
-    "# 4\t1.622400\t1.494095\t0.659850\n",
-    "# 5\t1.622400\t1.398662\t0.676862\n",
-    "# 6\t1.384200\t1.343984\t0.686286\n",
-    "# 7\t1.384200\t1.317516\t0.688876\n",
-    "#  [142/142 00:06]\n",
-    "# Perplexity on validation set: 3.759"
+    "              )\n"
    ]
   },
   {
@@ -407,14 +393,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "inp1 = {'Title':'Flattering',\n",
-    "        'Review Text': \"Love this skirt. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\"\n",
-    "       }"
+    "We can extract a feature vector from a raw text"
    ]
   },
   {
@@ -423,7 +405,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_config = AutoConfig.from_pretrained('./sample_weights/lm_model',output_hidden_states=True)"
+    "# including the `Title` entry, because we have it as our metadata in the data controller\n",
+    "inp1 = {'Title':'Flattering',\n",
+    "        'Review Text': \"Love this skirt. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\"\n",
+    "       }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There's a crucial step we have to do: set `output_hidden_states` to be `True`, so that the model can return them back for us to extract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_config = AutoConfig.from_pretrained('./sample_weights/roberta_lm_model',output_hidden_states=True)"
    ]
   },
   {
@@ -449,11 +450,18 @@
    ],
    "source": [
     "trained_model = language_model_init(AutoModelForCausalLM,\n",
-    "                                    cpoint_path='./sample_weights/lm_model',\n",
+    "                                    cpoint_path='./sample_weights/roberta_lm_model',\n",
     "                                    config=_config\n",
     "                                   )\n",
     "\n",
     "controller2 = ModelLMController(trained_model,data_store=tdc,seed=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When `output_hidden_states` is set to `True`, the model will return a variable called `hidden_states`, which construct of hidden states of each layer in RoBERTa-base model. We only want the last layer's hidden states (index -1), and we want the hidden vector of the first token of this layer (the `[CLS]` token)"
    ]
   },
   {
@@ -492,6 +500,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The lenght of the hidden vector (our feature vector) from the first token of the last layer of RoBERTa is 768"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -515,7 +530,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### From validation (or even train) set"
+    "### From train (or validation) set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, we can extract feature vectors for all sentences in our training set"
    ]
   },
   {
@@ -524,7 +546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hidden_from_vals = controller2.get_hidden_states(ds_type='validation',\n",
+    "hidden_from_train = controller2.get_hidden_states(ds_type='train',\n",
     "                                                 state_name='hidden_states',\n",
     "                                                 state_idx=[-1,0]\n",
     "                                                )"
@@ -540,7 +562,7 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['input_ids', 'attention_mask', 'special_tokens_mask', 'hidden_states'],\n",
-       "    num_rows: 4529\n",
+       "    num_rows: 18112\n",
        "})"
       ]
      },
@@ -550,7 +572,7 @@
     }
    ],
    "source": [
-    "hidden_from_vals"
+    "hidden_from_train"
    ]
   },
   {
@@ -561,7 +583,7 @@
     {
      "data": {
       "text/plain": [
-       "(4529, 768)"
+       "(18112, 768)"
       ]
      },
      "execution_count": null,
@@ -570,7 +592,14 @@
     }
    ],
    "source": [
-    "hidden_from_vals['hidden_states'].shape"
+    "hidden_from_train['hidden_states'].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What can we do with feature vectors?"
    ]
   }
  ],
